Doc/force-app/main/default/objects/Software_License__c/Software_License__c.object-meta.xml
<CustomObject>
    <description>This object is to track an instance of an installed software license version in their environment. Right now, this is in tended to represent DTE products only and it will eventually be migrated over to subscriptions.</description>
    <label>Software License</label>
    <nameField>
        <displayFormat>SL-{000000}</displayFormat>
        <label>Software License Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Software Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>