Doc/force-app/main/default/objects/Software_License__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Software Licenses</relationshipLabel>
    <relationshipName>Software_Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>