Doc/force-app/main/default/objects/Software_License__c/fields/Current_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Current_Quantity__c</fullName>
    <label>Current Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>