Doc/force-app/main/default/objects/Software_License__c/fields/License_Status__c.field-meta.xml
<CustomField>
    <fullName>License_Status__c</fullName>
    <label>License Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>