Doc/force-app/main/default/objects/Software_License__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Eval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>