Doc/force-app/main/default/objects/Software_License__c/fields/Upgrade_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_Install_Date__c</fullName>
    <label>Upgrade Install Date</label>
    <type>Date</type>
</CustomField>